# tools

./: pyproject.toml
eval/: parquet2jsonl.py
sft/: convert_excel_dataset_to_alpaca.py  create_sft_excel_dataset.py  expand_dataset.py  intercept_bigfile_to_smallfile.sh  random_cropping_json_files.py  random_dataset_excel.py
